# dair_exploration

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt
config/: default.gin  default.mjcf
scripts/: clear_jax_cache.sh  run_experiment.py
src/dair_exploration/: action_utils.py  data_util.py  diffsim.py  exploration.py  file_util.py  file_utils.py  gui_util.py  gui_utils.py  learning.py  mjx_util.py  trifinger_utils.py
src/dair_exploration/lcmtypes/: README.md
src/dair_exploration/lcmtypes/dairlib/: __init__.py  lcmt_densetact_measurement.py  lcmt_densetact_measurement_data.py  lcmt_fingertips_position.py  lcmt_fingertips_target_kinematics.py  lcmt_object_state.py
tests/: test_exploration.py  test_gui.py  test_theory.py  test_theory_v2.py
