[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "dair_exploration"
version = "0.0.1"
authors = [
  { name="Ethan K. Gordon", email="ethankg@seas.upenn.edu" },
]
description = "Tactile active exploration for dynamic rigid bodies"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "jax[cuda13]",
  "mujoco-mjx",
  "gin-config", # Gin Configuration
  "warp-lang", # GPU Acceleration for Mujoco
  "gitpython", # file_util to identify repository (EXAMPLES ONLY)
  "meshcat", # Visualization
  "lcm", # Communicating with robot/simulator
]

[project.optional-dependencies]
dev = [
  "black", # Initial Linter
  "pylint", # Final Linter
]

[project.urls]
Homepage = "https://github.com/dairlab/dair_exploration"
Issues = "https://github.com/dairlab/dair_exploration/issues"

### Linting
[tool.pylint.main]
ignore-paths = ["^src/dair_exploration/lcmtypes/.*$"]
extension-pkg-allow-list = ["mujoco"]
